fixed module spacing on state page

--- a/tourismaustralia-styleguide/assets/scss/site/modules/_herovideo.scss
+++ b/tourismaustralia-styleguide/assets/scss/site/modules/_herovideo.scss
@@ -1,7 +1,6 @@
 .hero-video {
 	display: table;
 	height: 290px;
-	margin-bottom: .8em;
 	position: relative;
 	width:  100%;
 
